--- a/SiKGLE.html
+++ b/SiKGLE.html
@@ -6,19 +6,22 @@
     </head>
     <body>
         <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-        <div align="center">
-            <img src="SiKGLElogo.png" width="40%">
-            <br>
-            <input type="Text" Name="search" placeholder="시끌시끌한 이야기들의 모임~" style="width:70%; height:5%;font-size:100%;">
-            <button type="button" style="height:5%;">검색</button>
-        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <form action="https://www.google.com/search?" method="GET">
+            <div align="center">
+                <img src="SiKGLElogo.png" width="40%">
+                <br>
+                <br>
+                <input type="Text" Name="q" value="" placeholder="시끌시끌한 이야기들의 모임~" style="width:70%; height:5%;font-size:100%;" >
+                <button type="submit" style="height:5%;">검색</button>
+            </div>
+        </form>
         
     </body>
 </html>
