--- a/jUNSiKWiKi.html
+++ b/jUNSiKWiKi.html
@@ -87,6 +87,10 @@
                     </td>
                 </tr>
                 <tr>
+                    <th>소속사</th>
+                    <td>라라Joun</td>
+                </tr>
+                <tr>
                     <th>국적</th>
                     <td>대한민국</td>
                 </tr>
