--- a/SiKGLE.html
+++ b/SiKGLE.html
@@ -3,6 +3,17 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>SiKGLE</title>
+        <style>
+            div.news {
+                display: flex;
+            }
+            .img {
+                flex: 1;
+            }
+            .content {
+                flex: 3;
+            }
+        </style>
     </head>
     <body>
         <br>
@@ -22,6 +33,15 @@
                 <button type="submit" style="height:5%;">검색</button>
             </div>
         </form>
+        
+        <div class="news">
+            <div class="img">
+                <img src="babyJUNSIK.png" width="100%">
+            </div>
+            <div class="content">
+                <a href="news1.html"><h1>준식, 100주년 어린이날 맞아 어릴때 사진 공개</h1></a>
+            </div>
+        </div>
         
     </body>
 </html>
