--- a/SiKGLE.html
+++ b/SiKGLE.html
@@ -6,6 +6,7 @@
         <style>
             div.news {
                 display: flex;
+                padding: 10%;
             }
             .img {
                 flex: 1;
