--- a/jUNSiKWiKi.html
+++ b/jUNSiKWiKi.html
@@ -96,7 +96,7 @@
                 </tr>
                 <tr>
                     <th>데뷔</th>
-                    <td>미정</td>
+                    <td>2022.06.06</td>
                 </tr>
                 <tr>
                     <th>종교</th>
@@ -104,7 +104,7 @@
                 </tr>
                 <tr>
                     <th>팬덤</th>
-                    <td>원내수공업(가제)</td>
+                    <td>고구마</td>
                 </tr>
                 <tr>
                     <th>MBTI</th>
@@ -112,8 +112,8 @@
                 </tr>
                 <tr>
                     <th>본캐</th>
-                    <td><a href="https://www.instagram.com/wjswns28/" target="_blank">
-                        <img src="instagram.png" width="6%"></a>전준영</td>
+                    <td><a href="https://www.instagram.com/joun.junjun/" target="_blank">
+                        <img src="instagram.png" width="6%"></a>전준준</td>
                 </tr>
             </tbody>
             </table>
