--- a/Guessong.html
+++ b/Guessong.html
@@ -7,9 +7,15 @@
             body {
                 font-family: Arial;
             }
+            .button {
+                font-size: xx-large;
+            }
         </style>
     </head>
     <body align="center">
-        <h1>Test!!</h1>
+        <h1>-Guessing the sonG-</h1>
+        <form>
+            <input type="button" class="button" value="play">
+        </form>
     </body>
 </html>
