--- a/Guessong.html
+++ b/Guessong.html
@@ -12,10 +12,14 @@
             }
         </style>
     </head>
+    
     <body align="center">
         <h1>-Guessing the sonG-</h1>
         <form>
             <input type="button" class="button" value="play">
         </form>
+        <div id="player"></div>
+
+        <script type="text/javascript" src="guess.js"></script> 
     </body>
 </html>
