--- a/Guessong.html
+++ b/Guessong.html
@@ -18,8 +18,11 @@
         <form>
             <input type="button" class="button" value="play">
         </form>
-        <div id="player"></div>
+        <div id="player">
+            
+        </div>
 
         <script type="text/javascript" src="guess.js"></script> 
     </body>
 </html>
+
