--- a/Guessong.html
+++ b/Guessong.html
@@ -16,9 +16,9 @@
     <body align="center">
         <h1>-Guessing the sonG-</h1>
         <form>
-            <input type="button" class="button" value="play">
+            <input type="button" class="button" value="play" onclick="playVideo();">
         </form>
-        <div id="player">
+        <div id="player" >
             
         </div>
 
