--- a/Guessong.html
+++ b/Guessong.html
@@ -18,7 +18,7 @@
         <form>
             <input type="button" class="button" value="play" onclick="playVideo();">
         </form>
-        <div id="player" >
+        <div id="player" hidden="True">
             
         </div>
 
