--- a/Guessong.html
+++ b/Guessong.html
@@ -17,6 +17,7 @@
         <h1>-Guessing the sonG-</h1>
         <form>
             <input type="button" class="button" value="play" onclick="playVideo();">
+            <input type="button" class="button" value="pause" onclick="pauseVideo();">
         </form>
         <div id="player" hidden="True">
             
