--- a/Guessong.html
+++ b/Guessong.html
@@ -15,7 +15,7 @@
     </head>
     
     <body align="center">
-        <span>update 27Aug22 23:37</span>
+        <span>update 27Aug22 23:43</span>
         <h1>-GueSsing the SonG-</h1>
         <form>
             <input type="button" class="button" value="Play" onclick="playMusic();">
@@ -30,7 +30,7 @@
             <br>
             <input type="button" class="button" value="Next" onclick="next();">
             <br>
-            <div id="player">
+            <div id="player" hidden="true">
             
             </div>
         </div>
