Please use the Chrome browser for smooth use.

--- a/Guessong.html
+++ b/Guessong.html
@@ -15,7 +15,8 @@
     </head>
     
     <body align="center">
-        <span>update 28Aug22 01:43</span>
+        <span>update 28Aug22 01:48</span>
+        <span>**Please use the Chrome browser for smooth use**</span>
         <h1>-GueSsing the SonG-</h1>
         <form>
             <input type="button" class="button" value="Play" onclick="playMusic();" id="playBtn">
