--- a/Guessong.html
+++ b/Guessong.html
@@ -15,9 +15,11 @@
     </head>
     
     <body align="center">
-        <span>update 28Aug22 01:48</span>
+        <span>update 28Aug22 02:15</span>
         <br>
         <span>**Please use the Chrome browser for smooth use**</span>
+        <br>
+        <span>**간혹 재생이 되지 않은 곡은 @joun.junjun으로 피드백 부탁드립니다!</span>
         <h1>-GueSsing the SonG-</h1>
         <form>
             <input type="button" class="button" value="Play" onclick="playMusic();" id="playBtn">
