--- a/Guessong.html
+++ b/Guessong.html
@@ -15,7 +15,7 @@
     </head>
     
     <body align="center">
-        <span>update 28Aug22 02:25</span>
+        <span>update 28Aug22 02:33</span>
         <br>
         <span>**Please use the Chrome browser for smooth use**</span>
         <br>
@@ -34,6 +34,7 @@
             <br>
             <input type="button" class="button" value="Next" onclick="next();">
             <br>
+            <img width="50%" id="albumArt">
         </div>
         <div id="videoZone">
             <div id="player">
