--- a/Guessong.html
+++ b/Guessong.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>GueSsing the SonG!</title>
+        <title>GueSs the SonG!</title>
         <script type="text/javascript" src="music.json"></script>
         <style>
             body {
@@ -15,12 +15,9 @@
     </head>
     
     <body align="center">
-        <span>update 28Aug22 13:25</span>
+        <span>update 28Aug22 14:08</span>
         <br>
-        <span>**Please use the Chrome browser for smooth use**</span>
-        <br>
-        <span>**간혹 재생이 되지 않은 곡은 @joun.junjun으로 피드백 부탁드립니다!</span>
-        <h1>-GueSsing the SonG-</h1>
+        <h1>-GueSs the SonG-</h1>
         <form>
             <input type="button" class="button" value="Play" onclick="playMusic();" id="playBtn">
             <input type="button" class="button" value="정답보기" onclick="showAnswer();" id="answerBtn">
