--- a/Guessong.html
+++ b/Guessong.html
@@ -7,6 +7,7 @@
         <style>
             body {
                 font-family: Arial;
+                background-color: gray;
             }
             .button {
                 font-size: xx-large;
