--- a/backgroundTest.html
+++ b/backgroundTest.html
@@ -8,15 +8,12 @@
             body {
                 font-family: Arial;
                 background-color: gray;
-                text-align: center;
             }
             *{margin: 0; padding: 0;}
            .container {
-                text-align: center;
                 width: 100%;
            }
            .box {
-                text-align: center;
                 width: 100%;
                 position: relative;
            }
@@ -32,21 +29,21 @@
                 position: absolute;
                 width: 100%;
                 margin-top: 113.3%;
-                margin-left: -26%;
+                margin-left: 12.1%;
 
            }
            .ansBtn {
                 position: absolute;
                 width: 100%;
                 margin-top: 118.3%;
-                margin-left: 15.2%;
+                margin-left: 43.2%;
 
            }
             
         </style>
     </head>
     
-    <body align="center">
+    <body >
         <div class="container">
 
             <div class="box">
