--- a/backgroundTest.html
+++ b/backgroundTest.html
@@ -11,15 +11,17 @@
             }
             *{margin: 0; padding: 0;}
            .container {
-                width: 100%;
+                width: 90%;
            }
            .box {
                 width: 100%;
                 position: relative;
            }
            .back {
+                width:83%;
+                margin-left: 8.5%;
+                margin-top: 14%;
                 position: absolute;
-                margin-top: 25%;
 
            }
            .front {
@@ -44,7 +46,7 @@
     </head>
     
     <body >
-        <span>update 29Aug22 01:08</span>
+        <span>update 29Aug22 01:06</span>
         <div class="container">
 
             <div class="box">
