--- a/backgroundTest.html
+++ b/backgroundTest.html
@@ -11,7 +11,8 @@
             }
             *{margin: 0; padding: 0;}
            .container {
-                width: 90%;
+                position: fixed;
+                width: 100%;
            }
            .box {
                 width: 100%;
