--- a/Guessong.html
+++ b/Guessong.html
@@ -97,9 +97,7 @@
     </head>
     
     <body >
-        <span>update 29Aug22 02:55</span>
-        <br>
-        <span>Only for mobile!!</span>
+        <span>ver.2_2908220259</span>
         <div class="wrap">
         <div class="container">
             <div class="box">
