--- a/Guessong.html
+++ b/Guessong.html
@@ -169,7 +169,8 @@
     </head>
     
     <body >
-        <span>ver.2_2908221839</span>
+        <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=http%3A%2F%2Fjunsik-universe.com%2FGuessong.html&count_bg=%234765BE&title_bg=%23555555&icon=&icon_color=%23EBEBEB&title=hits&edge_flat=false"/></a>
+        <span>ver.2_2908221850</span>
         <div class="wrap">
         <div class="container">
             <div class="box">
