--- a/GuessongV1.html
+++ b/GuessongV1.html
@@ -41,7 +41,7 @@
         </div>
        
         
-        <script type="text/javascript" src="guess.js"></script> 
+        <script type="text/javascript" src="guessOld.js"></script> 
     </body>
 </html>
 
