--- a/GuessongV1.html
+++ b/GuessongV1.html
@@ -3,7 +3,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>GueSs the SonG!</title>
-        <script type="text/javascript" src="music.json"></script>
+        <script type="text/javascript" src="guessSrc/music.json"></script>
         <style>
             body {
                 font-family: Arial;
