--- a/test.html
+++ b/test.html
@@ -11,10 +11,6 @@
     </head>
     
     <body>
-        <h1>test</h1>
-        <img src="guessSrc/toggle.png" id="toggle" onmousedown="MouseMove(this);">
-        
-        <script type="text/javascript" src="drag.js"></script> 
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/yFkvinwYbes" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
-
