--- a/test.html
+++ b/test.html
@@ -11,6 +11,6 @@
     </head>
     
     <body>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/yFkvinwYbes" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <input type="file" accept="image/*" capture="camera">
     </body>
 </html>
