--- a/EscpaeFromPOOPhand/escapeFromPOOPhand.html
+++ b/EscpaeFromPOOPhand/escapeFromPOOPhand.html
@@ -4,15 +4,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--meta http-equiv="X-UA-Compatible" content="ie=edge"-->
-        <title>Escape From POOP hand</title>
+        <title>Escape From POOP hand 1</title>
         <style>
 
-            #cameraView {
-                position: fixed;
-                width: 100%;
-                height: 100%;
-                
-            }
+            
 
             #camera--trigger{
                 width: 180px;
