--- a/EscpaeFromPOOPhand/escapeFromPOOPhand.html
+++ b/EscpaeFromPOOPhand/escapeFromPOOPhand.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--meta http-equiv="X-UA-Compatible" content="ie=edge"-->
-        <title>Escape From POOP hand 1</title>
+        <title>Escape From POOP hand</title>
         <style>
 
             
@@ -26,7 +26,7 @@
         </style>
     </head>
     <body>
-        <h2>Escape From POOP hand</h2>
+        <h2>Escape From POOP hand 1</h2>
         <video autoplay="true" id="cameraView" width="100%" height="100%"></video>
         <button id="camera--trigger">Take Photo</button>
 
