--- a/EscpaeFromPOOPhand/escapeFromPOOPhand.html
+++ b/EscpaeFromPOOPhand/escapeFromPOOPhand.html
@@ -23,7 +23,7 @@
                 position: fixed;
                 height: 100%;
                 width: 100%;
-                object-fit: cover;
+                object-fit: fill;
                 transform: scaleX(-1);
             }
 
@@ -31,6 +31,7 @@
                 position: fixed;
                 width: 100%;
                 object-fit: fill;
+                opacity: 0.5;
             }
 
             #trigger{
