--- a/EscpaeFromPOOPhand/escapeFromPOOPhand.html
+++ b/EscpaeFromPOOPhand/escapeFromPOOPhand.html
@@ -54,7 +54,7 @@
         <div id="header">
             
             <h2>Escape From POOP hand 3</h2>
-            <input type="file" accept="image/*" capture="camera" id="importIMG" onchange="loadFile(this);">
+            <input type="file" accept="image/*" id="importIMG" onchange="loadFile(this);">
         </div>
 
         <canvas id="cameraSensor"></canvas>
