--- a/EscpaeFromPOOPhand/escapeFromPOOPhand.html
+++ b/EscpaeFromPOOPhand/escapeFromPOOPhand.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <!--meta http-equiv="X-UA-Compatible" content="ie=edge"-->
         <title>Escape From POOP hand</title>
         <style>
@@ -53,7 +54,7 @@
     <body>
         <div id="header">
             
-            <h2>Escape From POOP hand 3</h2>
+            <h2>Escape From POOP hand 4</h2>
             <input type="file" accept="image/*" id="importIMG" onchange="loadFile(this);">
         </div>
 
