recirect to craft file

--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>junsik-universe</title>
-
-    </head>
-    
-    <body >
-      <h1>not yet open!</h1>
-
-    </body>
+  <head>
+    <meta http-equiv="refresh" content="7; url='https://www.craft.do/s/T38liyZZccqu7z'" />
+  </head>
+  <body>
+    <p>Redirect <a href="https://www.craft.do/s/T38liyZZccqu7z">Click this</a>.</p>
+  </body>
 </html>
