--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="7; url='https://www.craft.do/s/T38liyZZccqu7z'" />
+    <meta http-equiv="refresh" content="0; url=https://www.craft.do/s/T38liyZZccqu7z" />
   </head>
   <body>
     <p>Redirect <a href="https://www.craft.do/s/T38liyZZccqu7z">Click this</a>.</p>
