change gif to GIF

--- a/BOWM/menu.html
+++ b/BOWM/menu.html
@@ -49,7 +49,7 @@
             <a id="title">SPECIAL SIGNATURE</a>
 
             <p class="box">
-                <img src="images/피치선셋.GIF" width="100%">
+                <img src="images/peachsunset.GIF" width="100%">
                 <a id="name">
                     <b>피치선셋</b> - 8000₩
                 </a>
@@ -177,7 +177,7 @@
                 </a>
             </p>
             <p class="box">
-                <img src="images/레몬에이드.gif" width="100%">
+                <img src="images/lemonade.GIF" width="100%">
                 <a id="name">
                     <b>생 레몬에이드</b> - 7500₩
                 </a>
