--- a/BOWM/menu.html
+++ b/BOWM/menu.html
@@ -214,7 +214,7 @@
                 </a>
                 <a id="description">
                     <br>
-                    하비스커스, 블랙베리, 레드프루츠, 카페인free
+                    히비스커스, 블랙베리, 레드프루츠, 카페인free
                 </a>
             </p>
             <p class="box">
@@ -236,7 +236,7 @@
                     <br>
                     (얼그레이)
                     <br>
-                    얼그레이, 라임, 베르가뭇, 라일락
+                    얼그레이, 라임, 베르가못, 라일락
                 </a>
             </p>
         </p>
