--- a/BOWM/menu.html
+++ b/BOWM/menu.html
@@ -153,7 +153,7 @@
             <p class="box">
                 <img src="images/준비중.jpg" width="100%">
                 <a id="name">
-                    <b>얼그레이 밀크치</b> - 7000₩
+                    <b>얼그레이 밀크티</b> - 7000₩
                 </a>
                 <a id="description">
                     <br>
