--- a/BOWM/menu.html
+++ b/BOWM/menu.html
@@ -15,7 +15,7 @@
                 width: 60%;
                 display: inline-block;
                 border:1.5px solid black;
-                margin-top: -10px;
+                margin-top: -8px;
             }
             #blue-box {
                 background: blue;
@@ -35,6 +35,12 @@
             }
             #name {
                 font-size: 100%;
+            }
+            table {
+                width: 100%;
+            }
+            #price {
+                text-align: end;
             }
 
 
@@ -66,7 +72,7 @@
             <a id="title">COFFEE</a>
             
             <p class="box">
-                <img src="images/보움라떼.jpg" width="100%">
+                <img src="images/보움라떼.jpeg" width="100%">
                 <a id="name">
                     <b>보움라떼</b> - 7000₩
                 </a>
@@ -78,7 +84,6 @@
                 </a>
             </p>
             <p class="box">
-                <img src="images/준비중.jpg" width="100%">
                 <a id="name">
                     <b>바닐라빈 라떼</b> - 7000₩
                 </a>
@@ -139,7 +144,6 @@
             <a id="title">BEVERAGE</a>
             
             <p class="box">
-                <img src="images/준비중.jpg" width="100%">
                 <a id="name">
                     <b>보움초코라떼</b> - 8000₩
                 </a>
@@ -151,7 +155,6 @@
                 </a>
             </p>
             <p class="box">
-                <img src="images/준비중.jpg" width="100%">
                 <a id="name">
                     <b>얼그레이 밀크티</b> - 7000₩
                 </a>
@@ -200,6 +203,7 @@
                 </a>
             </p>
             <p class="box">
+                <img src="images/생감귤착즙주스1.jpeg" width="100%">
                 <a id="name">
                     <b>생 감귤착즙 쥬스</b> - 8000₩
                 </a>
