시그니처 메뉴 추가

--- a/BOWM/menu.html
+++ b/BOWM/menu.html
@@ -57,6 +57,7 @@
             <p class="box">
                 <img src="images/peachsunset.GIF" width="100%">
                 <a id="name">
+                    <img src="images/orangeV.png" width="15px">
                     <b>피치선셋</b> - 8000₩
                 </a>
                 <a id="description">
@@ -74,6 +75,7 @@
             <p class="box">
                 <img src="images/보움라떼.jpeg" width="100%">
                 <a id="name">
+                    <img src="images/blueV.png" width="15px">
                     <b>보움라떼</b> - 7000₩
                 </a>
                 <a id="description">
@@ -85,6 +87,7 @@
             </p>
             <p class="box">
                 <a id="name">
+                    <img src="images/blueV.png" width="15px">
                     <b>바닐라빈 라떼</b> - 7000₩
                 </a>
                 <br>
@@ -145,6 +148,7 @@
             
             <p class="box">
                 <a id="name">
+                    <img src="images/blueV.png" width="15px">
                     <b>보움초코라떼</b> - 8000₩
                 </a>
                 <a id="description">
@@ -156,6 +160,7 @@
             </p>
             <p class="box">
                 <a id="name">
+                    <img src="images/blueV.png" width="15px">
                     <b>얼그레이 밀크티</b> - 7000₩
                 </a>
                 <a id="description">
@@ -180,7 +185,7 @@
                 </a>
             </p>
             <p class="box">
-                <img src="images/lemonade.GIF" width="100%">
+                <img src="images/레몬에이드.gif" width="100%">
                 <a id="name">
                     <b>생 레몬에이드</b> - 7500₩
                 </a>
