add instagram link

--- a/BOWM/menu.html
+++ b/BOWM/menu.html
@@ -43,6 +43,12 @@
                 text-align: end;
             }
 
+            #hyperlink {
+                text-decoration: none;
+                color: #DF5F3B;
+                color: #334EA0;
+            }
+
 
 
           </style>
@@ -249,7 +255,12 @@
                 </a>
             </p>
         </p>
-
+        <a href="https://www.instagram.com/east__harmony" target="_blank" id="hyperlink">
+            <img src="images/instagram.png" width="20px" style="vertical-align: middle;">
+            @east__harmony
+        </a>
+        <br>
+        <br>
 
     </body>
 </html>
