add strawberry cream image

--- a/BOWM/menu.html
+++ b/BOWM/menu.html
@@ -181,6 +181,7 @@
                 </a>
             </p>
             <p class="box">
+                <img src="images/딸기크림.jpeg" width="100%">
                 <a id="name">
                     <b>딸기크림라떼</b> - 7000₩
                 </a>
