--- a/BOWM/menu.html
+++ b/BOWM/menu.html
@@ -58,6 +58,17 @@
         <br>
         <img src="bowm-title.png" alt="My Image" width="100%">
         <p>
+            <p class="box">
+                <a href="images/메뉴판230120.png">
+                    <img src="images/메뉴판230120.png" width="100%">
+                </a>
+                <a id="description">
+                    (클릭 시 확대 됩니다.)
+                    <br>
+                </a>
+            </p>
+        </p>
+        <p>
             <a id="title">SPECIAL SIGNATURE</a>
 
             <p class="box">
