--- a/retroBot/index.html
+++ b/retroBot/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Analog Chatbot</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!-- Neo둥근모 -->
 <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/gh/neodgm/neodgm-webfont@latest/neodgm/style.css"> -->
 
