버전 현황 추가

--- a/beIDOL/index.html
+++ b/beIDOL/index.html
@@ -16,7 +16,7 @@
       </div>
       <div id="user-input-container">
         <div id="user-input-wrapper">
-          <textarea id="user-input" placeholder="메시지를 입력하세요..." rows="1"></textarea>
+          <textarea id="user-input" placeholder="ver1메시지를 입력하세요..." rows="1"></textarea>
           <button id="send-button" onclick="sendUserInput()">⬆</button>
         </div>
       </div>
