--- a/beIDOL/index.html
+++ b/beIDOL/index.html
@@ -18,8 +18,8 @@
     </div>
     <div id="user-input-container">
 			<div id="user-input-wrapper">
-				<textarea id="user-input" placeholder="ver2메시지를 입력하세요..." rows="1"></textarea>
-				<button id="send-button" onclick="sendUserInput()">⬆</button>
+				<textarea id="user-input" placeholder="ver1메시지를 입력하세요..." rows="1"></textarea>
+				<button id="send-button" onclick="sendUserInput()">Send</button>
 			</div>
 		</div>
     <script src="script.js"></script>
