--- a/beIDOL/index.html
+++ b/beIDOL/index.html
@@ -6,22 +6,31 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="chat-container">
-      <div id="chat-history">
-        <div class="message-container">
-          <div class="user-message-bubble">
-            <p class="message-text">안녕하세요! 아이돌 되어보기 입니다!</p>
-          </div>
-        </div>
-      </div>
-      
-    </div>
-    <div id="user-input-container">
-			<div id="user-input-wrapper">
-				<textarea id="user-input" placeholder="ver2메시지를 입력하세요..." rows="1"></textarea>
-				<button id="send-button" onclick="sendUserInput()">Send</button>
+
+		<div id="background">
+
+			<div id="chat-container">
+				<div id="chat-history">
+					<div class="message-container">
+						<div class="user-message-bubble">
+							<p class="message-text">안녕하세요! 아이돌 되어보기 입니다!</p>
+						</div>
+					</div>
+				</div>
 			</div>
+	
+			<div id="user-input-container">
+				<div id="user-input-wrapper">
+					<textarea id="user-input" placeholder="ver1메시지를 입력하세요..." rows="1"></textarea>
+					<button id="send-button" onclick="sendUserInput()">Send</button>
+				</div>
+			</div>
+
+
 		</div>
+
+   
+
     <script src="script.js"></script>
   </body>
 </html>
