input value 한글 오류

--- a/beIDOL/index.html
+++ b/beIDOL/index.html
@@ -21,7 +21,7 @@
 	
 			<div id="user-input-container">
 				<div id="user-input-wrapper">
-					<textarea id="user-input" placeholder="ver2메시지를 입력하세요..." rows="1" autofocus></textarea>
+					<textarea id="user-input" placeholder="ver1메시지를 입력하세요..." rows="1"></textarea>
 					<button id="send-button" onclick="sendUserInput()">Send</button>
 				</div>
 			</div>
