--- a/beIDOL/index.html
+++ b/beIDOL/index.html
@@ -12,8 +12,8 @@
 			<div id="chat-container">
 				<div id="chat-history">
 					<img src="beidol_logo.png" width="100%">
-					<div class="message-container">
-						<div class="user-message-bubble">
+					<div class="bot-message-container">
+						<div class="bot-message-bubble">
 							<p class="message-text">안녕하세요! 아이돌 되어보기 입니다!</p>
 						</div>
 					</div>
@@ -22,7 +22,7 @@
 	
 			<div id="user-input-container">
 				<div id="user-input-wrapper">
-					<textarea id="user-input" placeholder="ver1메시지를 입력하세요..." rows="1"></textarea>
+					<textarea id="user-input" placeholder="ver2메시지를 입력하세요..." rows="1"></textarea>
 					<button id="send-button" onclick="sendUserInput()">Send</button>
 				</div>
 			</div>
